fix: soften visual contrast when selecting and rotating a card

--- a/src/main/less/endofline.less
+++ b/src/main/less/endofline.less
@@ -111,7 +111,7 @@
 }
 
 .rotate-button:hover{
-  background: lightgray;
+  background: darkgrey;
 }
 
 .rotated-card-0 {
